// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Lexer knows blank 1`] = `Array []`;

exports[`Lexer knows blank 2`] = `Array []`;

exports[`Lexer knows blank 3`] = `Array []`;

exports[`Lexer knows blank 4`] = `Array []`;

exports[`Lexer knows blank 5`] = `Array []`;

exports[`Lexer knows blank 6`] = `Array []`;

exports[`Lexer knows blank 7`] = `Array []`;

exports[`Lexer knows block begins 1`] = `
Array [
  Object {
    "data": Object {
      "params": Array [
        "swift",
      ],
      "type": "SRC",
    },
    "name": "block.begin",
    "position": Object {
      "end": Object {
        "column": 17,
        "line": 0,
      },
      "start": Object {
        "column": 0,
        "line": 0,
      },
    },
  },
]
`;

exports[`Lexer knows block begins 2`] = `
Array [
  Object {
    "data": Object {
      "params": Array [
        "swift",
      ],
      "type": "src",
    },
    "name": "block.begin",
    "position": Object {
      "end": Object {
        "column": 17,
        "line": 0,
      },
      "start": Object {
        "column": 0,
        "line": 0,
      },
    },
  },
]
`;

exports[`Lexer knows block begins 3`] = `
Array [
  Object {
    "data": Object {
      "params": Array [],
      "type": "example",
    },
    "name": "block.begin",
    "position": Object {
      "end": Object {
        "column": 15,
        "line": 0,
      },
      "start": Object {
        "column": 0,
        "line": 0,
      },
    },
  },
]
`;

exports[`Lexer knows block begins 4`] = `
Array [
  Object {
    "data": Object {
      "params": Array [],
      "type": "ex😀mple",
    },
    "name": "block.begin",
    "position": Object {
      "end": Object {
        "column": 16,
        "line": 0,
      },
      "start": Object {
        "column": 0,
        "line": 0,
      },
    },
  },
]
`;

exports[`Lexer knows block begins 5`] = `
Array [
  Object {
    "data": Object {
      "params": Array [
        "swift",
        ":tangle",
        "code.swift",
      ],
      "type": "src",
    },
    "name": "block.begin",
    "position": Object {
      "end": Object {
        "column": 36,
        "line": 0,
      },
      "start": Object {
        "column": 0,
        "line": 0,
      },
    },
  },
]
`;

exports[`Lexer knows block ends 1`] = `
Array [
  Object {
    "data": Object {
      "type": "SRC",
    },
    "name": "block.end",
    "position": Object {
      "end": Object {
        "column": 9,
        "line": 0,
      },
      "start": Object {
        "column": 0,
        "line": 0,
      },
    },
  },
]
`;

exports[`Lexer knows block ends 2`] = `
Array [
  Object {
    "data": Object {
      "type": "SRC",
    },
    "name": "block.end",
    "position": Object {
      "end": Object {
        "column": 11,
        "line": 0,
      },
      "start": Object {
        "column": 2,
        "line": 0,
      },
    },
  },
]
`;

exports[`Lexer knows block ends 3`] = `
Array [
  Object {
    "data": Object {
      "type": "src",
    },
    "name": "block.end",
    "position": Object {
      "end": Object {
        "column": 9,
        "line": 0,
      },
      "start": Object {
        "column": 0,
        "line": 0,
      },
    },
  },
]
`;

exports[`Lexer knows block ends 4`] = `
Array [
  Object {
    "data": Object {
      "type": "SRC",
    },
    "name": "block.end",
    "position": Object {
      "end": Object {
        "column": 9,
        "line": 0,
      },
      "start": Object {
        "column": 0,
        "line": 0,
      },
    },
  },
]
`;

exports[`Lexer knows block ends 5`] = `
Array [
  Object {
    "data": Object {
      "type": "S😀RC",
    },
    "name": "block.end",
    "position": Object {
      "end": Object {
        "column": 11,
        "line": 0,
      },
      "start": Object {
        "column": 0,
        "line": 0,
      },
    },
  },
]
`;

exports[`Lexer knows comments 1`] = `
Array [
  Object {
    "name": "comment",
    "position": Object {
      "end": Object {
        "column": 11,
        "line": 0,
      },
      "start": Object {
        "column": 0,
        "line": 0,
      },
    },
  },
]
`;

exports[`Lexer knows comments 2`] = `
Array [
  Object {
    "name": "comment",
    "position": Object {
      "end": Object {
        "column": 2,
        "line": 0,
      },
      "start": Object {
        "column": 0,
        "line": 0,
      },
    },
  },
]
`;

exports[`Lexer knows comments 3`] = `
Array [
  Object {
    "name": "comment",
    "position": Object {
      "end": Object {
        "column": 13,
        "line": 0,
      },
      "start": Object {
        "column": 0,
        "line": 0,
      },
    },
  },
]
`;

exports[`Lexer knows comments 4`] = `
Array [
  Object {
    "name": "comment",
    "position": Object {
      "end": Object {
        "column": 12,
        "line": 0,
      },
      "start": Object {
        "column": 1,
        "line": 0,
      },
    },
  },
]
`;

exports[`Lexer knows comments 5`] = `
Array [
  Object {
    "name": "comment",
    "position": Object {
      "end": Object {
        "column": 16,
        "line": 0,
      },
      "start": Object {
        "column": 5,
        "line": 0,
      },
    },
  },
]
`;

exports[`Lexer knows comments 6`] = `
Array [
  Object {
    "name": "comment",
    "position": Object {
      "end": Object {
        "column": 13,
        "line": 0,
      },
      "start": Object {
        "column": 0,
        "line": 0,
      },
    },
  },
]
`;

exports[`Lexer knows comments 7`] = `
Array [
  Object {
    "name": "comment",
    "position": Object {
      "end": Object {
        "column": 16,
        "line": 0,
      },
      "start": Object {
        "column": 0,
        "line": 0,
      },
    },
  },
]
`;

exports[`Lexer knows drawer begins 1`] = `
Object {
  "data": Object {
    "type": "PROPERTIES",
  },
  "name": "drawer.begin",
  "raw": ":PROPERTIES:",
}
`;

exports[`Lexer knows drawer begins 2`] = `
Object {
  "data": Object {
    "type": "properties",
  },
  "name": "drawer.begin",
  "raw": "  :properties:",
}
`;

exports[`Lexer knows drawer begins 3`] = `
Object {
  "data": Object {
    "type": "properties",
  },
  "name": "drawer.begin",
  "raw": "  :properties:  ",
}
`;

exports[`Lexer knows drawer begins 4`] = `
Object {
  "data": Object {
    "type": "prop_erties",
  },
  "name": "drawer.begin",
  "raw": "  :prop_erties:  ",
}
`;

exports[`Lexer knows drawer ends 1`] = `
Object {
  "data": Object {},
  "name": "drawer.end",
  "raw": ":END:",
}
`;

exports[`Lexer knows drawer ends 2`] = `
Object {
  "data": Object {},
  "name": "drawer.end",
  "raw": "  :end:",
}
`;

exports[`Lexer knows drawer ends 3`] = `
Object {
  "data": Object {},
  "name": "drawer.end",
  "raw": "  :end:  ",
}
`;

exports[`Lexer knows drawer ends 4`] = `
Object {
  "data": Object {},
  "name": "drawer.end",
  "raw": "  :end:  ",
}
`;

exports[`Lexer knows footnotes 1`] = `
Object {
  "data": Object {
    "content": "a footnote",
    "label": "1",
  },
  "name": "footnote",
  "raw": "[fn:1] a footnote",
}
`;

exports[`Lexer knows footnotes 2`] = `
Object {
  "data": Object {
    "content": "a footnote",
    "label": "word",
  },
  "name": "footnote",
  "raw": "[fn:word] a footnote",
}
`;

exports[`Lexer knows footnotes 3`] = `
Object {
  "data": Object {
    "content": "a footnote",
    "label": "word_",
  },
  "name": "footnote",
  "raw": "[fn:word_] a footnote",
}
`;

exports[`Lexer knows footnotes 4`] = `
Object {
  "data": Object {
    "content": "a footnote",
    "label": "wor1d_",
  },
  "name": "footnote",
  "raw": "[fn:wor1d_] a footnote",
}
`;

exports[`Lexer knows headlines 1`] = `
Array [
  Object {
    "data": Object {
      "level": 2,
    },
    "name": "stars",
    "position": Object {
      "end": Object {
        "column": 2,
        "line": 0,
      },
      "start": Object {
        "column": 0,
        "line": 0,
      },
    },
  },
  Object {
    "name": "text.plain",
    "position": Object {
      "end": Object {
        "column": 13,
        "line": 0,
      },
      "start": Object {
        "column": 3,
        "line": 0,
      },
    },
  },
]
`;

exports[`Lexer knows headlines 2`] = `
Array [
  Object {
    "data": Object {
      "level": 2,
    },
    "name": "stars",
    "position": Object {
      "end": Object {
        "column": 2,
        "line": 0,
      },
      "start": Object {
        "column": 0,
        "line": 0,
      },
    },
  },
  Object {
    "name": "text.underline",
    "position": Object {
      "end": Object {
        "column": 13,
        "line": 0,
      },
      "start": Object {
        "column": 3,
        "line": 0,
      },
    },
  },
]
`;

exports[`Lexer knows headlines 3`] = `
Array [
  Object {
    "data": Object {
      "level": 2,
    },
    "name": "stars",
    "position": Object {
      "end": Object {
        "column": 2,
        "line": 0,
      },
      "start": Object {
        "column": 0,
        "line": 0,
      },
    },
  },
  Object {
    "name": "text.plain",
    "position": Object {
      "end": Object {
        "column": 15,
        "line": 0,
      },
      "start": Object {
        "column": 5,
        "line": 0,
      },
    },
  },
]
`;

exports[`Lexer knows headlines 4`] = `
Array [
  Object {
    "data": Object {
      "level": 5,
    },
    "name": "stars",
    "position": Object {
      "end": Object {
        "column": 5,
        "line": 0,
      },
      "start": Object {
        "column": 0,
        "line": 0,
      },
    },
  },
  Object {
    "name": "text.plain",
    "position": Object {
      "end": Object {
        "column": 16,
        "line": 0,
      },
      "start": Object {
        "column": 6,
        "line": 0,
      },
    },
  },
]
`;

exports[`Lexer knows headlines 5`] = `
Array [
  Object {
    "data": Object {
      "level": 1,
    },
    "name": "stars",
    "position": Object {
      "end": Object {
        "column": 1,
        "line": 0,
      },
      "start": Object {
        "column": 0,
        "line": 0,
      },
    },
  },
  Object {
    "name": "text.plain",
    "position": Object {
      "end": Object {
        "column": 10,
        "line": 0,
      },
      "start": Object {
        "column": 2,
        "line": 0,
      },
    },
  },
]
`;

exports[`Lexer knows headlines 6`] = `
Array [
  Object {
    "data": Object {
      "level": 1,
    },
    "name": "stars",
    "position": Object {
      "end": Object {
        "column": 1,
        "line": 0,
      },
      "start": Object {
        "column": 0,
        "line": 0,
      },
    },
  },
  Object {
    "name": "keyword",
    "position": Object {
      "end": Object {
        "column": 6,
        "line": 0,
      },
      "start": Object {
        "column": 2,
        "line": 0,
      },
    },
  },
  Object {
    "name": "priority",
    "position": Object {
      "end": Object {
        "column": 11,
        "line": 0,
      },
      "start": Object {
        "column": 7,
        "line": 0,
      },
    },
  },
  Object {
    "name": "text.plain",
    "position": Object {
      "end": Object {
        "column": 22,
        "line": 0,
      },
      "start": Object {
        "column": 12,
        "line": 0,
      },
    },
  },
  Object {
    "name": "tags",
    "position": Object {
      "end": Object {
        "column": 38,
        "line": 0,
      },
      "start": Object {
        "column": 27,
        "line": 0,
      },
    },
  },
]
`;

exports[`Lexer knows horizontal rules 1`] = `
Array [
  Object {
    "name": "hr",
    "position": Object {
      "end": Object {
        "column": 5,
        "line": 0,
      },
      "start": Object {
        "column": 0,
        "line": 0,
      },
    },
  },
]
`;

exports[`Lexer knows horizontal rules 2`] = `
Array [
  Object {
    "name": "hr",
    "position": Object {
      "end": Object {
        "column": 6,
        "line": 0,
      },
      "start": Object {
        "column": 0,
        "line": 0,
      },
    },
  },
]
`;

exports[`Lexer knows horizontal rules 3`] = `
Array [
  Object {
    "name": "hr",
    "position": Object {
      "end": Object {
        "column": 8,
        "line": 0,
      },
      "start": Object {
        "column": 0,
        "line": 0,
      },
    },
  },
]
`;

exports[`Lexer knows horizontal rules 4`] = `
Array [
  Object {
    "name": "hr",
    "position": Object {
      "end": Object {
        "column": 7,
        "line": 0,
      },
      "start": Object {
        "column": 2,
        "line": 0,
      },
    },
  },
]
`;

exports[`Lexer knows horizontal rules 5`] = `
Array [
  Object {
    "name": "hr",
    "position": Object {
      "end": Object {
        "column": 8,
        "line": 0,
      },
      "start": Object {
        "column": 0,
        "line": 0,
      },
    },
  },
]
`;

exports[`Lexer knows horizontal rules 6`] = `
Array [
  Object {
    "name": "hr",
    "position": Object {
      "end": Object {
        "column": 10,
        "line": 0,
      },
      "start": Object {
        "column": 2,
        "line": 0,
      },
    },
  },
]
`;

exports[`Lexer knows horizontal rules 7`] = `
Array [
  Object {
    "name": "hr",
    "position": Object {
      "end": Object {
        "column": 11,
        "line": 0,
      },
      "start": Object {
        "column": 2,
        "line": 0,
      },
    },
  },
]
`;

exports[`Lexer knows keywords 1`] = `
Array [
  Object {
    "data": Object {
      "key": "KEY",
      "value": "Value",
    },
    "name": "keyword",
    "position": Object {
      "end": Object {
        "column": 12,
        "line": 0,
      },
      "start": Object {
        "column": 0,
        "line": 0,
      },
    },
  },
]
`;

exports[`Lexer knows keywords 2`] = `
Array [
  Object {
    "data": Object {
      "key": "KEY",
      "value": "Another Value",
    },
    "name": "keyword",
    "position": Object {
      "end": Object {
        "column": 20,
        "line": 0,
      },
      "start": Object {
        "column": 0,
        "line": 0,
      },
    },
  },
]
`;

exports[`Lexer knows keywords 3`] = `
Array [
  Object {
    "data": Object {
      "key": "KEY",
      "value": "value : Value",
    },
    "name": "keyword",
    "position": Object {
      "end": Object {
        "column": 20,
        "line": 0,
      },
      "start": Object {
        "column": 0,
        "line": 0,
      },
    },
  },
]
`;

exports[`Lexer knows list items 1`] = `
Object {
  "data": Object {
    "checked": undefined,
    "content": "buy milk",
    "indent": 0,
    "ordered": false,
    "tag": undefined,
  },
  "name": "list.item",
  "raw": "- buy milk",
}
`;

exports[`Lexer knows list items 2`] = `
Object {
  "data": Object {
    "checked": undefined,
    "content": "buy milk",
    "indent": 0,
    "ordered": false,
    "tag": undefined,
  },
  "name": "list.item",
  "raw": "+ buy milk",
}
`;

exports[`Lexer knows list items 3`] = `
Object {
  "data": Object {
    "checked": undefined,
    "content": "buy milk",
    "indent": 0,
    "ordered": true,
    "tag": undefined,
  },
  "name": "list.item",
  "raw": "1. buy milk",
}
`;

exports[`Lexer knows list items 4`] = `
Object {
  "data": Object {
    "checked": undefined,
    "content": "buy milk",
    "indent": 0,
    "ordered": true,
    "tag": undefined,
  },
  "name": "list.item",
  "raw": "12. buy milk",
}
`;

exports[`Lexer knows list items 5`] = `
Object {
  "data": Object {
    "checked": undefined,
    "content": "buy milk",
    "indent": 0,
    "ordered": true,
    "tag": undefined,
  },
  "name": "list.item",
  "raw": "123) buy milk",
}
`;

exports[`Lexer knows list items 6`] = `
Object {
  "data": Object {
    "checked": true,
    "content": "buy milk checked",
    "indent": 0,
    "ordered": false,
    "tag": undefined,
  },
  "name": "list.item",
  "raw": "- [x] buy milk checked",
}
`;

exports[`Lexer knows list items 7`] = `
Object {
  "data": Object {
    "checked": true,
    "content": "buy milk checked",
    "indent": 0,
    "ordered": false,
    "tag": undefined,
  },
  "name": "list.item",
  "raw": "- [X] buy milk checked",
}
`;

exports[`Lexer knows list items 8`] = `
Object {
  "data": Object {
    "checked": true,
    "content": "buy milk checked",
    "indent": 0,
    "ordered": false,
    "tag": undefined,
  },
  "name": "list.item",
  "raw": "- [-] buy milk checked",
}
`;

exports[`Lexer knows list items 9`] = `
Object {
  "data": Object {
    "checked": false,
    "content": "buy milk unchecked",
    "indent": 0,
    "ordered": false,
    "tag": undefined,
  },
  "name": "list.item",
  "raw": "- [ ] buy milk unchecked",
}
`;

exports[`Lexer knows list items 10`] = `
Object {
  "data": Object {
    "checked": undefined,
    "content": "buy milk",
    "indent": 2,
    "ordered": false,
    "tag": undefined,
  },
  "name": "list.item",
  "raw": "  - buy milk",
}
`;

exports[`Lexer knows list items 11`] = `
Object {
  "data": Object {
    "checked": undefined,
    "content": "description here",
    "indent": 0,
    "ordered": false,
    "tag": "item1",
  },
  "name": "list.item",
  "raw": "- item1 :: description here",
}
`;

exports[`Lexer knows list items 12`] = `
Object {
  "name": "line",
  "raw": "- item2
 :: description here",
}
`;

exports[`Lexer knows list items 13`] = `
Object {
  "data": Object {
    "checked": true,
    "content": "description here",
    "indent": 0,
    "ordered": false,
    "tag": "item3",
  },
  "name": "list.item",
  "raw": "- [x] item3 :: description here",
}
`;

exports[`Lexer knows plannings 1`] = `
Array [
  Object {
    "data": Object {
      "keyword": "DEADLINE",
    },
    "name": "planning.keyword",
    "position": Object {
      "end": Object {
        "column": 9,
        "line": 0,
      },
      "start": Object {
        "column": 0,
        "line": 0,
      },
    },
  },
  Object {
    "data": Object {
      "date": 2017-12-31T11:00:00.000Z,
      "end": undefined,
    },
    "name": "planning.timestamp",
    "position": Object {
      "end": Object {
        "column": 26,
        "line": 0,
      },
      "start": Object {
        "column": 9,
        "line": 0,
      },
    },
  },
]
`;

exports[`Lexer knows plannings 2`] = `
Array [
  Object {
    "data": Object {
      "keyword": "DEADLINE",
    },
    "name": "planning.keyword",
    "position": Object {
      "end": Object {
        "column": 11,
        "line": 0,
      },
      "start": Object {
        "column": 2,
        "line": 0,
      },
    },
  },
  Object {
    "data": Object {
      "date": 2017-12-31T11:00:00.000Z,
      "end": undefined,
    },
    "name": "planning.timestamp",
    "position": Object {
      "end": Object {
        "column": 28,
        "line": 0,
      },
      "start": Object {
        "column": 11,
        "line": 0,
      },
    },
  },
]
`;

exports[`Lexer knows plannings 3`] = `
Array [
  Object {
    "data": Object {
      "keyword": "DEADLINE",
    },
    "name": "planning.keyword",
    "position": Object {
      "end": Object {
        "column": 11,
        "line": 0,
      },
      "start": Object {
        "column": 2,
        "line": 0,
      },
    },
  },
  Object {
    "data": Object {
      "date": 2017-12-31T11:00:00.000Z,
      "end": undefined,
    },
    "name": "planning.timestamp",
    "position": Object {
      "end": Object {
        "column": 28,
        "line": 0,
      },
      "start": Object {
        "column": 11,
        "line": 0,
      },
    },
  },
]
`;

exports[`Lexer knows plannings 4`] = `
Array [
  Object {
    "data": Object {
      "keyword": "DEADLINE",
    },
    "name": "planning.keyword",
    "position": Object {
      "end": Object {
        "column": 12,
        "line": 0,
      },
      "start": Object {
        "column": 3,
        "line": 0,
      },
    },
  },
  Object {
    "data": Object {
      "date": 2017-12-31T11:00:00.000Z,
      "end": undefined,
    },
    "name": "planning.timestamp",
    "position": Object {
      "end": Object {
        "column": 29,
        "line": 0,
      },
      "start": Object {
        "column": 12,
        "line": 0,
      },
    },
  },
]
`;

exports[`Lexer knows table row 1`] = `
Object {
  "data": Object {
    "cells": Array [
      "batman",
      "superman",
      "wonder woman",
    ],
  },
  "name": "table.row",
  "raw": "| batman | superman | wonder woman |",
}
`;

exports[`Lexer knows table rows 1`] = `
Object {
  "data": Object {
    "cells": Array [
      "hello",
      "world",
      "y'all",
    ],
  },
  "name": "table.row",
  "raw": "| hello | world | y'all |",
}
`;

exports[`Lexer knows table rows 2`] = `
Object {
  "data": Object {
    "cells": Array [
      "hello",
      "world",
      "y'all",
    ],
  },
  "name": "table.row",
  "raw": "   | hello | world | y'all |",
}
`;

exports[`Lexer knows table rows 3`] = `
Object {
  "data": Object {
    "cells": Array [
      "hello",
      "world",
      "y'all",
    ],
  },
  "name": "table.row",
  "raw": "|    hello |  world   |y'all |",
}
`;

exports[`Lexer knows table rows 4`] = `
Object {
  "data": Object {
    "cells": Array [
      "",
      "world",
      "",
    ],
  },
  "name": "table.row",
  "raw": "||  world   | |",
}
`;

exports[`Lexer knows table separators 1`] = `
Object {
  "data": Object {},
  "name": "table.separator",
  "raw": "|----+---+----|",
}
`;

exports[`Lexer knows table separators 2`] = `
Object {
  "data": Object {},
  "name": "table.separator",
  "raw": "|--=-+---+----|",
}
`;

exports[`Lexer knows table separators 3`] = `
Object {
  "data": Object {},
  "name": "table.separator",
  "raw": "  |----+---+----|",
}
`;

exports[`Lexer knows table separators 4`] = `
Object {
  "data": Object {},
  "name": "table.separator",
  "raw": "|----+---+----",
}
`;

exports[`Lexer knows table separators 5`] = `
Object {
  "data": Object {},
  "name": "table.separator",
  "raw": "|---",
}
`;

exports[`Lexer knows table separators 6`] = `
Object {
  "data": Object {},
  "name": "table.separator",
  "raw": "|-",
}
`;

exports[`Lexer knows these are not blanks 1`] = `
Array [
  Object {
    "name": "text.plain",
    "position": Object {
      "end": Object {
        "column": 3,
        "line": 0,
      },
      "start": Object {
        "column": 1,
        "line": 0,
      },
    },
  },
]
`;

exports[`Lexer knows these are not block begins 1`] = `
Array [
  Object {
    "name": "text.plain",
    "position": Object {
      "end": Object {
        "column": 19,
        "line": 0,
      },
      "start": Object {
        "column": 0,
        "line": 0,
      },
    },
  },
]
`;

exports[`Lexer knows these are not block ends 1`] = `
Array [
  Object {
    "name": "text.plain",
    "position": Object {
      "end": Object {
        "column": 10,
        "line": 0,
      },
      "start": Object {
        "column": 0,
        "line": 0,
      },
    },
  },
]
`;

exports[`Lexer knows these are not block ends 2`] = `
Array [
  Object {
    "name": "text.plain",
    "position": Object {
      "end": Object {
        "column": 15,
        "line": 0,
      },
      "start": Object {
        "column": 0,
        "line": 0,
      },
    },
  },
]
`;

exports[`Lexer knows these are not comments 1`] = `
Object {
  "name": "line",
  "raw": "#not a comment",
}
`;

exports[`Lexer knows these are not comments 2`] = `
Object {
  "name": "line",
  "raw": "  #not a comment",
}
`;

exports[`Lexer knows these are not drawer begins 1`] = `
Object {
  "name": "line",
  "raw": "PROPERTIES:",
}
`;

exports[`Lexer knows these are not drawer begins 2`] = `
Object {
  "name": "line",
  "raw": ":PROPERTIES",
}
`;

exports[`Lexer knows these are not drawer begins 3`] = `
Object {
  "name": "line",
  "raw": ":PR OPERTIES:",
}
`;

exports[`Lexer knows these are not drawer ends 1`] = `
Object {
  "name": "line",
  "raw": "END:",
}
`;

exports[`Lexer knows these are not drawer ends 2`] = `
Object {
  "name": "line",
  "raw": ":END",
}
`;

exports[`Lexer knows these are not drawer ends 3`] = `
Object {
  "name": "line",
  "raw": ":ENDed",
}
`;

exports[`Lexer knows these are not footnotes 1`] = `
Object {
  "name": "line",
  "raw": "[fn:1]: not a footnote",
}
`;

exports[`Lexer knows these are not footnotes 2`] = `
Object {
  "name": "line",
  "raw": " [fn:1] not a footnote",
}
`;

exports[`Lexer knows these are not footnotes 3`] = `
Object {
  "name": "line",
  "raw": "[[fn:1] not a footnote",
}
`;

exports[`Lexer knows these are not footnotes 4`] = `
Object {
  "name": "line",
  "raw": "	[fn:1] not a footnote",
}
`;

exports[`Lexer knows these are not headlines 1`] = `
Array [
  Object {
    "name": "text.plain",
    "position": Object {
      "end": Object {
        "column": 15,
        "line": 0,
      },
      "start": Object {
        "column": 0,
        "line": 0,
      },
    },
  },
]
`;

exports[`Lexer knows these are not headlines 2`] = `
Array [
  Object {
    "name": "text.plain",
    "position": Object {
      "end": Object {
        "column": 17,
        "line": 0,
      },
      "start": Object {
        "column": 1,
        "line": 0,
      },
    },
  },
]
`;

exports[`Lexer knows these are not headlines 3`] = `
Array [
  Object {
    "name": "text.bold",
    "position": Object {
      "end": Object {
        "column": 3,
        "line": 0,
      },
      "start": Object {
        "column": 0,
        "line": 0,
      },
    },
  },
  Object {
    "name": "text.plain",
    "position": Object {
      "end": Object {
        "column": 18,
        "line": 0,
      },
      "start": Object {
        "column": 3,
        "line": 0,
      },
    },
  },
]
`;

exports[`Lexer knows these are not headlines 4`] = `
Array [
  Object {
    "name": "text.plain",
    "position": Object {
      "end": Object {
        "column": 14,
        "line": 0,
      },
      "start": Object {
        "column": 0,
        "line": 0,
      },
    },
  },
]
`;

exports[`Lexer knows these are not horizontal rules 1`] = `
Array [
  Object {
    "name": "text.plain",
    "position": Object {
      "end": Object {
        "column": 4,
        "line": 0,
      },
      "start": Object {
        "column": 0,
        "line": 0,
      },
    },
  },
]
`;

exports[`Lexer knows these are not horizontal rules 2`] = `
Array [
  Object {
    "name": "text.plain",
    "position": Object {
      "end": Object {
        "column": 6,
        "line": 0,
      },
      "start": Object {
        "column": 0,
        "line": 0,
      },
    },
  },
]
`;

exports[`Lexer knows these are not horizontal rules 3`] = `
Array [
  Object {
    "name": "text.plain",
    "position": Object {
      "end": Object {
        "column": 6,
        "line": 0,
      },
      "start": Object {
        "column": 0,
        "line": 0,
      },
    },
  },
]
`;

exports[`Lexer knows these are not horizontal rules 4`] = `
Array [
  Object {
    "name": "text.plain",
    "position": Object {
      "end": Object {
        "column": 6,
        "line": 0,
      },
      "start": Object {
        "column": 0,
        "line": 0,
      },
    },
  },
]
`;

exports[`Lexer knows these are not horizontal rules 5`] = `
Array [
  Object {
    "name": "text.plain",
    "position": Object {
      "end": Object {
        "column": 10,
        "line": 0,
      },
      "start": Object {
        "column": 0,
        "line": 0,
      },
    },
  },
]
`;

exports[`Lexer knows these are not keywords 1`] = `
Array [
  Object {
    "name": "text.plain",
    "position": Object {
      "end": Object {
        "column": 13,
        "line": 0,
      },
      "start": Object {
        "column": 0,
        "line": 0,
      },
    },
  },
]
`;

exports[`Lexer knows these are not keywords 2`] = `
Array [
  Object {
    "name": "text.plain",
    "position": Object {
      "end": Object {
        "column": 13,
        "line": 0,
      },
      "start": Object {
        "column": 0,
        "line": 0,
      },
    },
  },
]
`;

exports[`Lexer knows these are not list items 1`] = `
Object {
  "name": "line",
  "raw": "-not item",
}
`;

exports[`Lexer knows these are not list items 2`] = `
Object {
  "name": "line",
  "raw": "1.not item",
}
`;

exports[`Lexer knows these are not list items 3`] = `
Object {
  "name": "line",
  "raw": "8)not item",
}
`;

exports[`Lexer knows these are not list items 4`] = `
Object {
  "name": "line",
  "raw": "8a) not item",
}
`;

exports[`Lexer knows these are not plannings 1`] = `
Array [
  Object {
    "name": "text.plain",
    "position": Object {
      "end": Object {
        "column": 26,
        "line": 0,
      },
      "start": Object {
        "column": 0,
        "line": 0,
      },
    },
  },
]
`;

exports[`Lexer knows these are not table rows 1`] = `
Object {
  "name": "line",
  "raw": " hello | world | y'all |",
}
`;

exports[`Lexer knows these are not table rows 2`] = `
Object {
  "name": "line",
  "raw": "|+",
}
`;

exports[`Lexer knows these are not table separators 1`] = `
Object {
  "name": "line",
  "raw": "----+---+----|",
}
`;

exports[`Lexer knows these are timestamps 1`] = `
Object {
  "data": Object {
    "date": 2019-08-18T12:00:00.000Z,
    "end": undefined,
  },
  "name": "timestamp",
  "raw": "<2019-08-19 Mon>",
}
`;

exports[`Lexer knows these are timestamps 2`] = `
Object {
  "data": Object {
    "date": 2019-08-19T01:20:00.000Z,
    "end": undefined,
  },
  "name": "timestamp",
  "raw": "<2019-08-19 Mon 13:20>",
}
`;

exports[`Lexer knows these are timestamps 3`] = `
Object {
  "data": Object {
    "date": 2019-08-19T01:20:00.000Z,
    "end": 2019-08-19T02:00:00.000Z,
  },
  "name": "timestamp",
  "raw": "<2019-08-19 Mon 13:20-14:00>",
}
`;

exports[`Lexer knows these are timestamps 4`] = `
Object {
  "data": Object {
    "date": 2019-08-18T12:00:00.000Z,
    "end": 2019-08-19T12:00:00.000Z,
  },
  "name": "timestamp",
  "raw": "<2019-08-19 Mon>--<2019-08-20 Tue>",
}
`;
